# TP_visualisation_scientifique

./: .gitignore  README.md
TP1/: CMakeLists.txt  TP1.kdev4  main.cpp
TP1/.kdev4/: TP1.kdev4
TP2/: CMakeLists.txt  Importer.cpp  Importer.h  convertAllData.sh  main.cpp
TP3/: CMakeLists.txt  Editor.cpp  Editor.h  IsoSurfacer.cpp  IsoSurfacer.h  main.cpp  question.txt
TP_paraview/: question.txt
TP_paraview/ex1(q1-q8)/: ex1.pvsm
TP_paraview/ex2(q9-q11)/: ex2.pvsm
TP_paraview/ex3(q12-q15)/: ex3.pvsm
TP_paraview/ex4(q16-q17)/: ex4.pvsm
TP_paraview/ex5(q18-q19)/: ex5.pvsm
TP_paraview/ex6(q20-q24)/: ex6.pvsm
TP_paraview/ex7(q25)/: ex7.pvsm
TP_paraview/ex8(q26-q30)/: ex8.pvsm
TP_paraview/ex9(q31)/: ex9.pvsm
